using System;
using System.Collections.Generic;
using System.Text;
using System.Threading.Tasks;

public class AnimationStrings
{
    public static string isGrounded = "isGrounded";
    public static string isMoving = "isMoving";
    public static string isRunning = "isRunning";
    public static string jumpTrigger = "hasJumped";
    public static string yVelocity = "yVelocity";
    public static string isOnWall = "isOnWall";
    public static string isOnCeiling = "isOnCeiling";
    public static string attackTrigger = "attack";
    public static string canMove = "canMove";
    public static string hasTarget = "hasTarget";
    public static string isAlive = "isAlive";
    public static string isHit = "isHit";
    public static string hitTrigger = "hit";
    public static string lockVelocity = "lockVelocity";
    public static string attackCooldown = "attackCooldown";
    public static string rangedAttackTrigger = "rangedAttack";
    public static string fireBallTrigger = "fireBall";
    public static string levelEndTrigger = "end";
    public static string levelStartTrigger = "start";
    public static string isAlert = "isAlert";
    public static string canKick = "canKick";
}